# Eco-Update-Synthesizer

./: .replit  README.md  analysis.py  class_outline.py  default_articles.json  generalized_scraper.py  main.py  make_website.py  pyproject.toml  refresh.py  refresh.sh  refresh.txt  website_scrapers.py
static/frontend/: globe-utilities.js  index.css  index.js
templates/: index.html
utilities/: analysis.py  article_class.py  article_scraping.py  database_helpers.py  website_scraping.py
